<resources>
    <string name="app_name">El Club Deportivo S.A</string>
    <string name="saludar">Saludar!</string>
    <string name="app_view_name">Dashboard</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="hola">Hola!</string>
    <string name="login_title">Club Deportivo</string>
    <string name="login_subtitle">Portal de Gestión</string>
    <string name="label_username">ingresa tu nombre de usuario o email</string>
    <string name="label_password">Ingresa tu contrasea</string>
    <string name="button_login">Ingresar al club</string>
    <string name="logo_de_un_jugador_para_el_club">logo de un jugador para el club</string>
    <string name="nombre_de_usuario_o_email">nombre de usuario o email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="app_version">v0.0.1</string>
    <string name="fgRegistro_title">Nuevo Registro</string>
    <string name="fgRegistro_info">Complete los datos para dar de alta un nuevo socio en el sistema.</string>
    <string name="fgRegistro_nombre">Nombre completo</string>
    <string name="fgRegistro_dni">Documento (DNI)</string>
    <string name="fgRegistro_confirmar">Confirmar Registro</string>
</resources>