<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegistroFragment">

    <TextView
        android:id="@+id/tvRegistroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fgRegistro_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tvRegistroSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fgRegistro_info"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistroTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Simulación de formulario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/fgRegistro_nombre"
        app:layout_constraintTop_toBottomOf="@id/tvRegistroSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDni"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/fgRegistro_dni"
        app:layout_constraintTop_toBottomOf="@id/tilNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmarRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/header_blue"
        android:padding="16dp"
        android:text="@string/fgRegistro_confirmar"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tilDni" />

</androidx.constraintlayout.widget.ConstraintLayout>